# newPOSv1

./: .env  .env.example  .gitignore  .watchmanconfig  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  QUICKSTART.md  README.md  entities.json  local.properties.template  mempalace.yaml  package-lock.json  package.json  react-native.config.js  setup.sh  tsconfig.json  turbo.json  vitest.base.config.ts  终端版本管理说明.md
.claude/: settings.local.json
.codex-tmp/: electron-base-probe.ts  electron-base-probe.tsconfig.json  electron-interconnection-probe.ts  electron-interconnection-probe.tsconfig.json
.omx/: metrics.json  project-memory.json
.playwright-cli/: page-2026-04-08T04-47-06-350Z.yml  page-2026-04-08T04-48-58-029Z.yml  page-2026-04-08T04-56-03-389Z.yml  page-2026-04-08T04-56-58-440Z.yml  page-2026-04-08T05-10-11-041Z.yml  page-2026-04-08T05-11-00-053Z.yml  page-2026-04-08T05-12-05-770Z.yml  page-2026-04-08T05-12-22-237Z.yml  page-2026-04-08T05-13-34-663Z.yml  page-2026-04-08T05-13-48-538Z.yml  page-2026-04-08T05-14-56-265Z.yml  page-2026-04-08T05-15-09-008Z.yml  page-2026-04-08T05-17-26-363Z.yml  page-2026-04-08T05-18-17-726Z.yml  page-2026-04-08T05-18-30-621Z.yml  page-2026-04-08T05-19-19-191Z.yml  page-2026-04-08T05-22-42-971Z.yml  page-2026-04-08T05-23-31-342Z.yml  page-2026-04-08T05-24-07-153Z.yml  page-2026-04-08T05-24-44-428Z.yml  page-2026-04-08T05-25-20-479Z.yml  page-2026-04-08T05-26-51-803Z.yml  page-2026-04-08T05-27-21-082Z.yml
.tmp/: hot-update-upload-smoke.mjs
1-kernel/: tsconfig.base.json
2-ui/: tsconfig.base.json
3-adapter/android/adapter-v1/android/turbomodule-lib/src/main/cpp/: CMakeLists.txt  quickjs_bridge.h
3-adapter/android/pos-adapter-v1/android/app/src/main/cpp/: CMakeLists.txt  QuickJSEngine.cpp  QuickJSEngine.h  ScriptExecutionModule.cpp  ScriptExecutionModule.h  ScriptExecutionModuleJSI.cpp  cpp-adapter.cpp
3-adapter/android/pos-adapter-v2/android/app/src/main/cpp/: CMakeLists.txt  cpp-adapter.cpp
3-adapter/android/pos-adapter-v3/android/app/src/main/cpp/: CMakeLists.txt  quickjs_bridge.c  quickjs_bridge.h
3-adapter/tauri/adapter-v1/native/: Cargo.toml  tauri.conf.json
3-adapter/tauri/adapter-v1/native/capabilities/: default.json
3-adapter/tauri/adapter-v1/native/icons/: icon.icns
3-adapter/tauri/adapter-v1/native/src/: lib.rs  main.rs
3-adapter/tauri/adapter-v1/native/src/commands/: connector.rs  device.rs  local_web_server.rs  mod.rs  script.rs
_package_template_/: README.md  template.config.json
ai-result/: 2026-04-06-mock-terminal-platform-implementation-log.md  2026-04-07-api体系评审与重设计方案.md  2026-04-07-assembly-android-mixc-retail-rn84v2-release-note.md  2026-04-07-assembly-electron-mixc-retail-v1-release-note.md  2026-04-07-http-service-registry-design.md  2026-04-07-http与ws通信体系评审与重设计方案.md  2026-04-07-mixc-user-login-design.md  2026-04-07-mock-terminal-platform-manual-console-design.md  2026-04-07-monorepo-versioning-and-release-strategy.md  2026-04-07-release-manifest-poc.md  2026-04-08-base-package-design-review.md  2026-04-08-interconnection-package-design-review.md  2026-04-08-navigation-package-design-review.md  2026-04-08-tcp-tdp-client-implementation-plan.md  2026-04-08-tcp-tdp-client-joint-design.md  2026-04-14-kernel-base-bug-review.md  2026-04-14-kernel-base-code-review-claude.md  2026-04-14-kernel-base-code-review.md  2026-04-14-kernel-base-final-optimization-recommendations.md  2026-04-14-kernel-base-simplification-review.md  2026-04-14-kernel-base-test-coverage.md  2026-04-15-kernel-base-bug-review-adjudication.md  2026-04-17-kernel-base-design-review.md  2026-04-17-ui-base-code-review.md  2026-04-18-mock-platform-multi-sandbox-implementation-summary.md  2026-04-18-mock-platform-multi-sandbox-plan-review.md  2026-04-18-mock-platform-multi-sandbox-review.md  2026-04-18-tdp-dynamic-group-policy-implementation-review.md  2026-04-18-tdp-dynamic-group-policy-review.md  2026-04-18-terminal-ts-hot-update-implementation-review.md  2026-04-18-terminal-ts-hot-update-review.md  2026-04-18-topology-runtime-v3-design-review.md  2026-04-18-topology-standalone-slave-review.md  2026-04-18-ui-automation-runtime-review.md  2026-04-19-topology-runtime-v3-device-verification.md  2026-04-20-adapter-android-v2-code-review.md  2026-04-20-assembly-mixc-retail-rn84-code-review.md  2026-04-20-kernel-base-code-review.md  2026-04-20-ui-base-code-review.md  android-assembly-adapter-audit-2026-04-20.md  (+2 more)
as-result/: 2026-04-28-tdp-topic-subscription-implementation-completeness-review.md  2026-04-28-tdp-topic-subscription-implementation-log.md  2026-04-28-tdp-topic-subscription-redesign-review-detailed.md  2026-04-29-tdp-projection-lifecycle-ttl-acceptance-report.md  2026-04-29-tdp-projection-lifecycle-ttl-design.md  2026-04-29-tdp-projection-lifecycle-ttl-implementation-log.md  2026-04-29-tdp-projection-lifecycle-ttl-implementation-plan.md  tdp-backoffice-data-sync-mechanism.md  tdp-topic-subscription-redesign.md
doc/: workspace-design.md  工程逻辑解读.md
docs/: admin-mall-tenant-console-recovery-handoff-2026-04-24.md  admin-mall-tenant-master-data-e2e.md  hot-update-system-guide.md
refactor-doc/: 2026-04-08-dual-topology-protocol-and-host-design.md  2026-04-08-kernel-base-refactor-architecture.md  2026-04-08-kernel-base-refactor-implementation-plan.md  2026-04-08-kernel-base-refactor-package-mapping.md  2026-04-09-dual-topology-host-implementation-plan.md  2026-04-09-dual-topology-reconnect-resume-design.md  2026-04-09-kernel-base-batch-a-implementation-plan.md  2026-04-09-kernel-base-current-progress-and-next-plan.md  2026-04-09-kernel-base-error-definition-and-catalog-design.md  2026-04-09-kernel-base-execution-runtime-implementation-plan.md  2026-04-09-kernel-base-logger-design-constraints.md  2026-04-09-kernel-base-parameter-definition-and-catalog-design.md  2026-04-09-kernel-base-runtime-shell-implementation-plan.md  2026-04-09-kernel-base-test-directory-and-verification-standard.md  2026-04-09-kernel-base-time-and-runtime-id-design.md  2026-04-09-kernel-base-topology-runtime-implementation-plan.md  (+73 more)
scripts/: check-env.cjs  (+20 more)
(+9330 files in other folders)
